new questions for HTML

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -5256,6 +5256,140 @@
         "design",
         "code"
       ]
+    },
+    {
+      "login": "alrenee99",
+      "name": "alrenee99",
+      "avatar_url": "https://avatars.githubusercontent.com/u/90872255?v=4",
+      "profile": "https://github.com/alrenee99",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "karuissobusy",
+      "name": "Karthick Vankayala",
+      "avatar_url": "https://avatars.githubusercontent.com/u/8011686?v=4",
+      "profile": "https://github.com/karuissobusy",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "IrynaTsymbaliuk",
+      "name": "Iryna ",
+      "avatar_url": "https://avatars.githubusercontent.com/u/42023359?v=4",
+      "profile": "https://github.com/IrynaTsymbaliuk",
+      "contributions": [
+        "design",
+        "code"
+      ]
+    },
+    {
+      "login": "palanugrah",
+      "name": "palanugrah",
+      "avatar_url": "https://avatars.githubusercontent.com/u/39839393?v=4",
+      "profile": "https://github.com/palanugrah",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "Gwinbleind",
+      "name": "Gwinbleind",
+      "avatar_url": "https://avatars.githubusercontent.com/u/52351166?v=4",
+      "profile": "https://github.com/Gwinbleind",
+      "contributions": [
+        "design",
+        "code"
+      ]
+    },
+    {
+      "login": "Sevitte",
+      "name": "Randy Bobandy",
+      "avatar_url": "https://avatars.githubusercontent.com/u/25014302?v=4",
+      "profile": "https://github.com/Sevitte",
+      "contributions": [
+        "design",
+        "code"
+      ]
+    },
+    {
+      "login": "bekrozikoff",
+      "name": "Bek Rozikoff",
+      "avatar_url": "https://avatars.githubusercontent.com/u/77227784?v=4",
+      "profile": "http://www.bekroz.com",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "davnguye",
+      "name": "davnguye",
+      "avatar_url": "https://avatars.githubusercontent.com/u/54002653?v=4",
+      "profile": "https://www.linkedin.com/in/david-nguyen-2790aa140/",
+      "contributions": [
+        "design",
+        "code"
+      ]
+    },
+    {
+      "login": "Neel301",
+      "name": "Neel Patel",
+      "avatar_url": "https://avatars.githubusercontent.com/u/57136375?v=4",
+      "profile": "https://github.com/Neel301",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "ehudbehar",
+      "name": "ehudbehar",
+      "avatar_url": "https://avatars.githubusercontent.com/u/25829515?v=4",
+      "profile": "https://github.com/ehudbehar",
+      "contributions": [
+        "design",
+        "code"
+      ]
+    },
+    {
+      "login": "nicholas-cod3r",
+      "name": "nicholas-cod3r",
+      "avatar_url": "https://avatars.githubusercontent.com/u/90457217?v=4",
+      "profile": "https://github.com/nicholas-cod3r",
+      "contributions": [
+        "design",
+        "code"
+      ]
+    },
+    {
+      "login": "michaelfranki",
+      "name": "michaelfranki",
+      "avatar_url": "https://avatars.githubusercontent.com/u/90117951?v=4",
+      "profile": "https://github.com/michaelfranki",
+      "contributions": [
+        "design"
+      ]
+    },
+    {
+      "login": "esteecodes",
+      "name": "Esther White",
+      "avatar_url": "https://avatars.githubusercontent.com/u/64324417?v=4",
+      "profile": "https://esteewhite.com",
+      "contributions": [
+        "design",
+        "code"
+      ]
+    },
+    {
+      "login": "prathmeshpb",
+      "name": "prathmeshpb",
+      "avatar_url": "https://avatars.githubusercontent.com/u/67878397?v=4",
+      "profile": "https://github.com/prathmeshpb",
+      "contributions": [
+        "design",
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
