--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,7 +6,7 @@
 /aws/ @jokerkeny
 /bash/ @D4RIO
 # won't work, needs renaming the dir to "c-sharp": /c#/ @LiviuSosu @RamonMartinezNieto
-/c-(programming-language)/ @makifay
+/c-(programming-language)/ @makifay @Amsal1 
 /front-end-development/ @vanekbr @ShankS3
 /go/ @ruslanbes
 /it-operations/ @asahiocean
