--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -13,7 +13,7 @@
 /java/ @sumanas27 @ruslanbes
 /javascript/ @taletski
 /json/ @iHamzaKhanzada
-/linux/ @D4RIO
+/linux/ @D4RIO @Amsal1
 /machine-learning/ @aaronwangj
 /microsoft-access/ @drmegalomaniac
 /microsoft-azure/ @tomtreffke
@@ -21,11 +21,11 @@
 /mysql/ @ruslanbes
 /node.js/ @pbachman
 /php/ @ruslanbes
-/python/ @tik9
+/python/ @tik9 @Amsal1
 /react/ @RobTables
 /ruby-on-rails/ @gudata
 /t-sql/ @beefydog
 /unity/ @uno-sebastian
 /vba/ @AdamKaczor6250
-/wordpress/ @ruslanbes
+/wordpress/ @ruslanbes @Amsal1
 /xml/ @ruslanbes
