Updated my username in contributor's list
I changed my username a few months ago. So I updated my username in the contributor's list. I request the owner team to approve my pull request. Thanks

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -2168,7 +2168,7 @@
       "login": "dev-mdminhaj",
       "name": "Muhammad Minhaj",
       "avatar_url": "https://avatars2.githubusercontent.com/u/64159776?v=4",
-      "profile": "https://dev-mdminhaj.github.io",
+      "profile": "https://muhammadminhaj.github.io",
       "contributions": [
         "code"
       ]
