--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "husky": "^7.0.2",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.1.0"
+    "husky": "7.0.4",
+    "prettier": "2.6.1",
+    "pretty-quick": "3.1.3"
   }
 }
