--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "main": "index.js",
   "repository": "https://github.com/Ebazhanov/linkedin-quiz-skill-assessments.git",
-  "author": "Evgeny Bazhanov <ebazhanov@users.noreply.github.com>",
+  "author": "Evgeny Bazhanov <13170022+Ebazhanov@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
     "format": "prettier --write ."
