All contributors/add osbm (#3723)
* docs: update README.md [skip ci]

* docs: update .all-contributorsrc [skip ci]

* Added another question for dotnet-framework (#3715)

Recently, I gave the .net framework assessment and this repo was really useful. There were a few questions missing, one of those trying to add here.

Co-authored-by: allcontributors[bot] <46447321+allcontributors[bot]@users.noreply.github.com>
Co-authored-by: Anand Prakash Tiwari <aptiwari11@gmail.com>

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -8473,6 +8473,16 @@
       ]
     },
     {
+      "login": "osbm",
+      "name": "Osman F Bayram",
+      "avatar_url": "https://avatars.githubusercontent.com/u/74963545?v=4",
+      "profile": "http://osbm.github.io",
+      "contributions": [
+        "design",
+        "code"
+      ]
+    },
+    {
       "login": "BenVlodgi",
       "name": "Benjamin Thomas Blodgett",
       "avatar_url": "https://avatars.githubusercontent.com/u/1462374?v=4",
